--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
             </li>
           </ul>
         </nav>
+        <button class="modal-window-open-button">
+          <svg
+            class="modal-window-open-button"
+            width="24"
+            height="24"
+            aria-label="open-button-icon"
+          >
+            <use href="./images/icons.svg#icon-burger"></use>
+          </svg>
+        </button>
         <address class="adress-list">
           <ul class="contact-list">
             <li>
@@ -67,7 +77,7 @@
         </div>
       </section>
       <!-- 2 section -->
-      <section class="page-advantage section">
+      <!-- <section class="page-advantage section">
         <div class="container">
           <h2 class="visually-hidden">Advantages</h2>
 
@@ -142,9 +152,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- 3 section -->
-      <section class="team-section section">
+      <!-- <section class="team-section section">
         <div class="container">
           <h2 class="team">Our Team</h2>
           <ul class="members-list">
@@ -395,10 +405,9 @@
             </li>
           </ul>
         </div>
-      </section>
-
+      </section> -->
       <!-- section 4 -->
-      <section class="portfolio-section section">
+      <!-- <section class="portfolio-section section">
         <div class="container">
           <h2 class="portfolio-main">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -653,9 +662,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-container">
         <div class="footer-main">
           <a href="./index.html" class="logotype footer-logotype"
@@ -748,8 +757,8 @@
           </form>
         </div>
       </div>
-    </footer>
-    <div class="backdrop">
+    </footer> -->
+    <!-- <div class="backdrop">
       <div class="modal">
         <button class="close-btn" type="button">
           <svg class="close-btn-icon" wih="8" height="8">
@@ -811,6 +820,96 @@
           <button type="submit" class="backdrop-btn">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
   </body>
+  <div class="modal-window-mobile">
+    <div class="container modal-mobile">
+      <button class="mobile-close-btn" type="button">
+        <svg class="mobile-close-btn-icon" wih="8" height="8">
+          <use href="./images/icons.svg#icon-close"></use>
+        </svg>
+      </button>
+      <nav class="mobile-nav">
+        <ul class="mobile-nav-menu">
+          <li class="mobile-nav-menu-item">
+            <a href="./index.html" class="mobile-nav-menu-link current-color"
+              >Studio</a
+            >
+          </li>
+          <li class="mobile-nav-menu-item">
+            <a href="" class="mobile-nav-menu-link">Portfolio</a>
+          </li>
+          <li class="mobile-nav-menu-item">
+            <a href="" class="mobile-nav-menu-link">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+      <address class="-mobile-adress-list">
+        <ul class="mobile-contact-list">
+          <li class="mobile-contact-list-part">
+            <a
+              href="mailto:info@devstudio.com"
+              class="current-color mobile-contact-list-item"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="mobile-contact-list-part">
+            <a href="tel:+110001111111" class="mobile-contact-list-item"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+        </ul>
+      </address>
+      <ul class="mobile-social-list">
+        <li class="mobile-social-link-item">
+          <a class="mobile-social-link" href="" target="_blank">
+            <svg
+              class="mobile-social-link-icon"
+              width="24"
+              height="24"
+              aria-label="instagram-icon"
+            >
+              <use href="./images/icons.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="mobile-social-link-item">
+          <a class="mobile-social-link" href="" target="_blank">
+            <svg
+              class="mobile-social-link-icon"
+              width="24"
+              height="24"
+              aria-label="twitter-icon"
+            >
+              <use href="./images/icons.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="mobile-social-link-item">
+          <a class="mobile-social-link" href="" target="_blank">
+            <svg
+              class="mobile-social-link-icon"
+              width="24"
+              height="24"
+              aria-label="facebook-icon"
+            >
+              <use href="./images/icons.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="mobile-social-link-item">
+          <a class="mobile-social-link" href="" target="_blank">
+            <svg
+              class="mobile-social-link-icon"
+              width="24"
+              height="24"
+              aria-label="linkedin-icon"
+            >
+              <use href="./images/icons.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
 </html>
