--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
       </section>
       <!-- 2 section -->
-      <!-- <section class="page-advantage section">
+      <section class="page-advantage section">
         <div class="container">
           <h2 class="visually-hidden">Advantages</h2>
 
@@ -93,7 +93,7 @@
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="advantages">Strategy</h3>
+              <h3 class="advantages-title title">Strategy</h3>
               <p class="advantages-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
@@ -110,7 +110,7 @@
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="advantages">Punctuality</h3>
+              <h3 class="advantages-title title">Punctuality</h3>
               <p class="advantages-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
@@ -127,7 +127,7 @@
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="advantages">Diligence</h3>
+              <h3 class="advantages-title title">Diligence</h3>
               <p class="advantages-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
@@ -144,7 +144,7 @@
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="advantages">Technologies</h3>
+              <h3 class="advantages-title title">Technologies</h3>
               <p class="advantages-text">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
@@ -152,11 +152,11 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- 3 section -->
-      <!-- <section class="team-section section">
+      <section class="team-section section">
         <div class="container">
-          <h2 class="team">Our Team</h2>
+          <h2 class="team title">Our Team</h2>
           <ul class="members-list">
             <li class="members-info">
               <picture>
@@ -405,11 +405,11 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- section 4 -->
-      <!-- <section class="portfolio-section section">
+      <section class="portfolio-section section">
         <div class="container">
-          <h2 class="portfolio-main">Our Portfolio</h2>
+          <h2 class="portfolio-main title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-list-main">
               <div class="overlay">
@@ -662,7 +662,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
     <!-- <footer class="footer">
       <div class="container footer-container">
