--- a/index.html
+++ b/index.html
@@ -438,7 +438,12 @@
                     media="(max-width: 767px)"
                   />
 
-                  <img src="./images/bank-app-mobile.jpg" alt="banking-app" />
+                  <img
+                    src="./images/bank-app-mobile.jpg"
+                    width="288"
+                    height="280"
+                    alt="banking-app"
+                  />
                 </picture>
                 <p class="overlay-text overlay-item">
                   14 Stylish and User-Friendly App Design Concepts · Task
