--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
         </div>
       </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer section">
       <div class="container footer-container">
         <div class="footer-main">
           <a href="./index.html" class="logotype footer-logotype"
@@ -675,11 +675,11 @@
             digital marketing & growth solutions
           </p>
         </div>
-        <div class="footer-link-">
+        <div class="footer-social">
           <p class="footer-links-text">Social media</p>
-          <ul class="footer-links">
+          <ul class="footer-links social-list">
             <li class="footer-social-links">
-              <a href="" class="footer-link-item" target="_blank">
+              <a href="" class="footer-link-item social-link" target="_blank">
                 <svg
                   class="social-link-icon"
                   aria-label="instagram-icon"
@@ -691,7 +691,7 @@
               </a>
             </li>
             <li class="footer-social-links">
-              <a href="" class="footer-link-item" target="_blank">
+              <a href="" class="footer-link-item social-link" target="_blank">
                 <svg
                   class="social-link-icon"
                   aria-label="twitter-icon"
@@ -703,7 +703,7 @@
               </a>
             </li>
             <li class="footer-social-links">
-              <a href="" class="footer-link-item" target="_blank">
+              <a href="" class="footer-link-item social-link" target="_blank">
                 <svg
                   class="social-link-icon"
                   aria-label="facebook-icon"
@@ -715,7 +715,7 @@
               </a>
             </li>
             <li class="footer-social-links">
-              <a href="" class="footer-link-item" target="_blank">
+              <a href="" class="footer-link-item social-link" target="_blank">
                 <svg
                   class="social-link-icon"
                   aria-label="linkedin-icon"
@@ -731,8 +731,8 @@
 
         <div class="form-section">
           <form class="footer-subscribe-form">
-            <label class="footer-form-label" id="email"
-              >Subscribe
+            <p class="footer-form-label">Subscribe</p>
+            <label class="footer-form-label" id="email">
               <input
                 class="footer-form"
                 type="email"
@@ -757,7 +757,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <!-- <div class="backdrop">
       <div class="modal">
         <button class="close-btn" type="button">
