--- a/index.html
+++ b/index.html
@@ -743,22 +743,20 @@
             </label>
             <button class="button-subscribe" type="submit">
               Subscribe
-              <div class="form-subscribe-icon-sec">
-                <svg
-                  class="form-subscribe-icon"
-                  widht="24"
-                  height="24"
-                  aria-label="icon-subscribe"
-                >
-                  <use href="./images/icons.svg#icon-subscribe"></use>
-                </svg>
-              </div>
+              <svg
+                class="form-subscribe-icon"
+                widht="24"
+                height="24"
+                aria-label="icon-subscribe"
+              >
+                <use href="./images/icons.svg#icon-subscribe"></use>
+              </svg>
             </button>
           </form>
         </div>
       </div>
     </footer>
-    <!-- <div class="backdrop">
+    <div class="backdrop">
       <div class="modal">
         <button class="close-btn" type="button">
           <svg class="close-btn-icon" wih="8" height="8">
@@ -820,7 +818,7 @@
           <button type="submit" class="backdrop-btn">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
   </body>
   <div class="modal-window-mobile">
     <div class="container modal-mobile">
