--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button class="close-btn" type="button">
           <svg class="close-btn-icon" wih="8" height="8">
@@ -769,48 +769,69 @@
         <form class="modal-form">
           <div class="form-wrapper">
             <label class="form-wrapper-label" for="name-form">Name</label>
-            <input
-              class="form-wrappper-input"
-              type="text"
-              name="tame"
-              id="name-form"
-            />
-            <svg class="input-icon" width="18" height="18">
-              <use href="./images/icons.svg#icon-user"></use>
-            </svg>
+            <div class="input-block">
+              <input
+                class="form-wrappper-input"
+                type="text"
+                name="tame"
+                id="name-form"
+              />
+              <svg class="input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-user"></use>
+              </svg>
+            </div>
           </div>
           <div class="form-wrapper">
             <label class="form-wrapper-label" for="phone-form">Phone</label>
-            <input
-              class="form-wrappper-input"
-              type="number"
-              name="phone"
-              id="phone-form"
-            />
+            <div class="input-block">
+              <input
+                class="form-wrappper-input"
+                type="number"
+                name="phone"
+                id="phone-form"
+              />
+              <svg class="input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-tel"></use>
+              </svg>
+            </div>
           </div>
           <div class="form-wrapper">
             <label class="form-wrapper-label" for="email-form">Email</label>
-            <input
-              class="form-wrappper-input"
-              type="email"
-              name="email"
-              id="email-form"
-            />
+            <div class="input-block">
+              <input
+                class="form-wrappper-input"
+                type="email"
+                name="email"
+                id="email-form"
+              />
+              <svg class="input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-mail"></use>
+              </svg>
+            </div>
           </div>
-          <div class="form-wrapper">
-            <label class="form-wrapper-label" for="comment-area"
+          <div class="form-textarea">
+            <label class="form-wrapper-label" for="user-comment"
               >Comment
             </label>
             <textarea
-              class="form-wrappper-input"
-              name="comment"
-              id="comment-area"
+              class="textarea-input"
+              name="user-comment"
+              id="user-comment"
               placeholder="Text input"
             ></textarea>
           </div>
-          <div class="form-wrapper">
-            <input type="checkbox" name="accept-form" id="accept-form" />
-            <label for="accept-form"
+          <div class="checkbox">
+            <input
+              class="checkbox-input visually-hidden"
+              type="checkbox"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
+            />
+            <label class="accept-form-label" for="user-privacy">
+              <span class="custom-checkbox"
+                ><svg class="checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-accept"></use></svg></span
               >I accept the terms and conditions of the
               <a class="form-link" href="">Privacy Policy</a></label
             >
