--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </nav>
         <button class="modal-window-open-button">
           <svg
-            class="modal-window-open-button"
+            class="modal-window-open-icon"
             width="24"
             height="24"
             aria-label="open-button-icon"
@@ -69,10 +69,8 @@
     <main>
       <!-- 1 section -->
       <section class="hero-image section">
-        <div class="container">
-          <h1 class="main-title main-title-section">
-            Effective Solutions for Your Business
-          </h1>
+        <div class="container main-title-section">
+          <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button type="button" class="button">Order Service</button>
         </div>
       </section>
@@ -756,7 +754,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="close-btn" type="button">
           <svg class="close-btn-icon" wih="8" height="8">
