--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       </section>
       <!-- 3 section -->
       <section class="team-section section">
-        <div class="container">
+        <div class="container team-container">
           <h2 class="team title">Our Team</h2>
           <ul class="members-list">
             <li class="members-info">
@@ -839,7 +839,7 @@
       </div>
     </div>
   </body>
-  <div class="modal-window-mobile is-open">
+  <div class="modal-window-mobile">
     <div class="container modal-mobile">
       <button class="mobile-close-btn" type="button">
         <svg class="mobile-close-btn-icon" wih="8" height="8">
