--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
     </div>
   </body>
   <div class="modal-window-mobile">
-    <div class="container modal-mobile">
+    <div class="modal-mobile">
       <button class="mobile-close-btn" type="button">
         <svg class="mobile-close-btn-icon" wih="8" height="8">
           <use href="./images/icons.svg#icon-close"></use>
@@ -861,72 +861,76 @@
           </li>
         </ul>
       </nav>
-      <address class="-mobile-adress-list">
-        <ul class="mobile-contact-list">
-          <li class="mobile-contact-list-part">
-            <a
-              href="tel:+110001111111"
-              class="current-color mobile-contact-list-item"
-              >+11 (000) 111-11-11</a
-            >
+      <div class="contact-social-container">
+        <address class="-mobile-adress-list">
+          <ul class="mobile-contact-list">
+            <li class="mobile-contact-list-part">
+              <a
+                href="tel:+110001111111"
+                class="current-color mobile-contact-list-item"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+            <li class="mobile-contact-list-part">
+              <a
+                href="mailto:info@devstudio.com"
+                class="mobile-contact-list-item"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+        </address>
+        <ul class="mobile-social-list">
+          <li class="mobile-social-link-item">
+            <a class="mobile-social-link" href="" target="_blank">
+              <svg
+                class="mobile-social-link-icon"
+                width="24"
+                height="24"
+                aria-label="instagram-icon"
+              >
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
           </li>
-          <li class="mobile-contact-list-part">
-            <a href="mailto:info@devstudio.com" class="mobile-contact-list-item"
-              >info@devstudio.com</a
-            >
+          <li class="mobile-social-link-item">
+            <a class="mobile-social-link" href="" target="_blank">
+              <svg
+                class="mobile-social-link-icon"
+                width="24"
+                height="24"
+                aria-label="twitter-icon"
+              >
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-social-link-item">
+            <a class="mobile-social-link" href="" target="_blank">
+              <svg
+                class="mobile-social-link-icon"
+                width="24"
+                height="24"
+                aria-label="facebook-icon"
+              >
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-social-link-item">
+            <a class="mobile-social-link" href="" target="_blank">
+              <svg
+                class="mobile-social-link-icon"
+                width="24"
+                height="24"
+                aria-label="linkedin-icon"
+              >
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
           </li>
         </ul>
-      </address>
-      <ul class="mobile-social-list">
-        <li class="mobile-social-link-item">
-          <a class="mobile-social-link" href="" target="_blank">
-            <svg
-              class="mobile-social-link-icon"
-              width="24"
-              height="24"
-              aria-label="instagram-icon"
-            >
-              <use href="./images/icons.svg#icon-instagram"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="mobile-social-link-item">
-          <a class="mobile-social-link" href="" target="_blank">
-            <svg
-              class="mobile-social-link-icon"
-              width="24"
-              height="24"
-              aria-label="twitter-icon"
-            >
-              <use href="./images/icons.svg#icon-twitter"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="mobile-social-link-item">
-          <a class="mobile-social-link" href="" target="_blank">
-            <svg
-              class="mobile-social-link-icon"
-              width="24"
-              height="24"
-              aria-label="facebook-icon"
-            >
-              <use href="./images/icons.svg#icon-facebook"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="mobile-social-link-item">
-          <a class="mobile-social-link" href="" target="_blank">
-            <svg
-              class="mobile-social-link-icon"
-              width="24"
-              height="24"
-              aria-label="linkedin-icon"
-            >
-              <use href="./images/icons.svg#icon-linkedin"></use>
-            </svg>
-          </a>
-        </li>
-      </ul>
+      </div>
     </div>
   </div>
 </html>
