--- a/index.html
+++ b/index.html
@@ -838,6 +838,7 @@
         </form>
       </div>
     </div>
+    <script type="module" src="./main.js"></script>
   </body>
   <div class="modal-window-mobile">
     <div class="modal-mobile">
